WTR - log the pid of a crashing WebProcess https://bugs.webkit.org/show_bug.cgi?id=81575

Reviewed by Alexey Proskuryakov.

This allows run-webkit-tests to find the right crash log for a
given crashed WebProcess in WebKit2.

* WebKitTestRunner/TestController.cpp:
(WTR::exceededDatabaseQuota):
(WTR::TestController::createOtherPage):
(WTR::TestController::initialize):
(WTR::TestController::resetStateToConsistentValues):
(WTR::TestController::runTest):
(WTR::TestController::processDidCrash):

Canonical link: https://commits.webkit.org/99122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111619 268f45cc-cd09-0410-ab3c-d52691b4dbfc